--- a/views/index.html
+++ b/views/index.html
@@ -207,7 +207,7 @@
           construct(line_at, line_bt); // Send over input
       }
 
-      //window.addEventListener("loadcomplete", mock); // CREATE INPUT AFTER VIDEO LOAD
+      window.addEventListener("loadcomplete", mock); // CREATE INPUT AFTER VIDEO LOAD
     
     </script>
   </body>
