--- a/views/index.html
+++ b/views/index.html
@@ -37,13 +37,10 @@
     <link rel="stylesheet" href="css/style.css">
 
     <link rel="canonical" href="https://www.bethevalley.com/"/>
-    <link rel="icon" 
-      type="image/png" 
-      href="images/icons/favicon.png"">
+    <link rel="icon" href="https://www.hbo.com/favicon.ico" />
 
     <script src="js/objects.js"></script>
     <script src="js/letters.js"></script>
-    <script src="js/drawing.js"></script>
     <script src="js/capture.js"></script>
 
     <script src="js/forms.js" defer></script>
@@ -117,20 +114,20 @@
           <div id="exports" class="d-flex justify-content-center flex-fill mb-4 pt-2 row hidden">
             <div id="downloading" class="has-border col-10 col-sm-4 col-lg-5 flex-fill pt-2 pb-4 px-4 pl-sm-4 pr-sm-1 pl-md-4 pr-md-2 pl-lg-5 pr-lg-3">
                 <h2 class="text-center text-lg-left mx-3 mx-lg-3  mb-1">Download your creation</h2>
-                <div class="d-flex flex-fill justify-content-center justify-content-lg-start mt-2 mt-sm-0 flex-column ">
+                <div class="d-flex flex-fill justify-content-end mt-2 mt-sm-0 flex-column ">
                   <div class="d-flex flex-fill justify-content-center justify-content-lg-start mt-2 mt-lg-0 flex-column flex-lg-row pt-2 pt-sm-0 pt-lg-0">  
                     <div class="m-3 m-sm-2 m-lg-3 text-center text-lg-left">
                       <button id="dlPhoto" class="btn rounded-lg dlbtn btn-primary text-uppercase flex-fill mx-auto pt-3 pb-2">Image<img src="../images/icons/download.png" class="ml-2 mb-1" width="20" height="19"><div></div></button>
                     </div>
-                    <div class="m-3 m-sm-2 m-lg-3 text-center text-lg-left">
+                    <!--<div class="m-3 m-sm-2 m-lg-3 text-center text-lg-left">
                       <button id="dlVideo" class="btn rounded-lg dlbtn btn-primary text-uppercase flex-fill mx-auto pt-3 pb-2">Video<img src="../images/icons/download.png" class="ml-2 mb-1" width="20" height="19"><div></div></button>
-                    </div>
+                    </div>-->
                   </div>
-                  <div id="dlVideoIOSNote" class="py-3 my-2 my-sm-1 my-lg-0 px-1 py-sm-0 px-lg-2 text-center text-black-50" style="font-size: 0.9rem;">*Video version only downloadable to desktop or Android devices. We know, iOS users… We know.</div>
+                  <!--<div id="dlVideoIOSNote" class="py-3 my-2 my-sm-1 my-lg-0 px-1 py-sm-0 px-lg-2 text-center text-black-50" style="font-size: 0.9rem;">*Video version only downloadable to desktop or Android devices. We know, iOS users… We know.</div>-->
                 </div>
             </div>
 
-            <div id="sharing" class="has-border col-10 col-sm-5 col-md-4 col-lg-4 flex-fill justify-content-center py-4 px-4 px-sm-2 d-flex ">
+            <!--<div id="sharing" class="has-border col-10 col-sm-5 col-md-4 col-lg-4 flex-fill justify-content-center py-4 px-4 px-sm-2 d-flex ">
               <div class="col-12 my-auto mx-0 align-self-center">
                 <h2 class="text-center text-lg-left">Share</h2>
                 <input id="shareurl" name="shareURL" type="text" class="form-control" style="padding-top: 13px" autocomplete="off">
@@ -146,8 +143,8 @@
                   </button>
                 </div>
               </div>
-            </div>
-            <div id="redo-container" class="col-10 text-center col-sm-3 col-md-4 col-lg-3 flex-fill d-flex justify-content-center justify-content-lg-end align-self-center my-2 py-4 px-2 pl-lg-2 pr-lg-5">
+            </div>-->
+            <div id="redo-container" class="col-10 text-center col-sm-3 col-md-4 flex-fill d-flex justify-content-center justify-content-md-end align-self-end my-2 py-4 px-2">
               <button id="redo" class="btn rounded-lg btn-primary  mr-sm-2 mr-md-4 mt-2 text-uppercase px-0 pt-3 pb-2">Redo</button>
             </div>
     
